[build-system]
requires = ["setuptools>=68,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffstpp"
version = "0.1.0"
dependencies = [
  "torch>=2.6.0,<2.7.0",          
  "torchdiffeq>=0.2.5",         
  "einops>=0.6.0",
  "tensorboard==2.18.0",
  "matplotlib>=3.3.4,<4.0.0",
  "scipy>=1.6.2,<2.0.0",
  "tqdm>=4.47.0,<5.0.0",
  "numpy>=1.19.5,<3.0.0",         
  "ctrnn>=2.0,<3.0",
  "scikit-learn>=1.0.2,<2.0.0",
]
[tool.setuptools.packages.find]
where = ["src"]
